# robo-gym-robot-servers

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  install-ros-dependencies.bash  install.sh  kinetic-install.sh  logging_config.yml  melodic-entrypoint.sh  melodic-install.bash  melodic-install.sh  melodic.Dockerfile  noetic.Dockerfile  panda_logging_config.yml  ros-entrypoint.sh  ~.gitlab-ci.yml
example_robot_server/: CMakeLists.txt  package.xml  setup.py
example_robot_server/launch/: robot_server.launch
example_robot_server/scripts/: cmd_vel_command_handler.py  robot_pose_publisher.py  robot_server.py
example_robot_server/src/example_robot_server/: ros_bridge.py
example_robot_server/src/mir100_robot_server/: ros_bridge.py
mir100_robot_server/: CMakeLists.txt  package.xml  setup.py
mir100_robot_server/launch/: real_robot_server.launch  sim_robot_server.launch
mir100_robot_server/rviz/: mir_rob_rl.rviz  mir_sim_rl.rviz
mir100_robot_server/scripts/: cmd_vel_command_handler.py  robot_pose_publisher.py  robot_server.py  ros_bridge.py
mir100_robot_server/src/mir100_robot_server/: ros_bridge.py
mir100_robot_server/worlds/: empty_world_fast.world  empty_world_target.world  lab_6x8.world
panda_robot_server/: CMakeLists.txt  package.xml  setup.py
panda_robot_server/launch/: panda_robot_server.launch  panda_sim_robot_server.launch  real_panda_robot_server.launch
panda_robot_server/launch/inc/: load_panda.launch.xml  load_panda_common.launch.xml  load_panda_sim.launch
panda_robot_server/rviz/: panda_sim_rl.rviz
panda_robot_server/scripts/: joint_trajectory_command_handler.py  robot_server.py  ros_bridge.py
panda_robot_server/src/panda_robot_server/: ros_bridge.py
panda_robot_server/worlds/: empty.world
simulation_objects/: CMakeLists.txt  package.xml
simulation_objects/models/box100/: box100.sdf  model.config
simulation_objects/models/box50/: box50.sdf
simulation_objects/models/green_ground/: model.config
simulation_objects/models/green_sphere50_no_collision/: green_sphere50_no_collision.sdf  model.config
simulation_objects/models/isaac_demotable_cuboid/: model.config  model.sdf
simulation_objects/models/sphere50/: model.config
simulation_objects/models/tabletop/: tabletop.sdf
simulation_objects/scripts/: objects_controller.py
simulation_objects/worlds/: box100.world  box50.world  empty.world  empty_no_gravity.world  isaactabletop_sphere50_no_collision.world  isaactabletop_sphere50_no_collision_no_gravity.world  tabletop_sphere50.world  tabletop_sphere50_green_sphere50_no_collision.world  tabletop_sphere50_no_collision_no_gravity.world
ur_robot_server/: CMakeLists.txt  package.xml  setup.py
ur_robot_server/config/: pointcloud_voxelizer_4_2_2.yaml  ur10_controllers.yaml  ur5_controllers.yaml
ur_robot_server/launch/: ur10_real_robot_server.launch  ur10_sim_robot_server.launch  ur5_real_robot_server.launch  ur5_sim_robot_server.launch  ur_robot_server.launch  ur_sim_robot_server.launch
ur_robot_server/launch/inc/: load_ur.launch.xml  load_ur10.launch.xml  load_ur10e.launch.xml  load_ur16e.launch.xml  load_ur3.launch.xml  load_ur3e.launch.xml  load_ur5.launch.xml  load_ur5e.launch.xml  ur_control.launch.xml
ur_robot_server/models/box100/: model.config
ur_robot_server/models/box50/: model.config
ur_robot_server/models/green_ground/: green_ground.sdf
ur_robot_server/models/red_box100/: model.config  red_box100.sdf
ur_robot_server/models/sphere50/: sphere50.sdf
ur_robot_server/models/sphere50_no_collision/: model.config  sphere50_no_collision.sdf
ur_robot_server/models/tabletop/: model.config
ur_robot_server/rviz/: ur_occupancy_rl.rviz  ur_rl.rviz  ur_rob_rl.rviz  ur_rob_with_target_tf_rl.rviz  ur_sim_rl.rviz
ur_robot_server/scripts/: joint_trajectory_command_handler.py  joint_velocity_estimator.py  objects_controller.py  obstacles_controller.py  robot_server.py  ros_bridge.py
ur_robot_server/src/ur_robot_server/: ros_bridge.py
ur_robot_server/urdf/: ur.xacro  ur_macro.xacro
ur_robot_server/worlds/: 2_box100.world  empty.world  tabletop_box100.world  tabletop_box50.world  tabletop_sphere50.world  tabletop_sphere50_no_collision.world
