<?xml version="1.0"?>
<package format="2">
  <name>mir100_robot_server</name>
  <version>1.0.0</version>
  <description>Robot Server for MiR 100</description>

  <maintainer email="matteo.lucchi@joanneum.at">Matteo Lucchi</maintainer>
  <maintainer email="friedemann.zindler@joanneum.at">Friedemann Zindler</maintainer>

  <license>MIT</license>

  <author email="matteo.lucchi@joanneum.at">Matteo Lucchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>mir_driver</exec_depend>
  <exec_depend>mir_gazebo</exec_depend>
  <exec_depend>tmux</exec_depend>

  <export>
  </export>
</package>
