<?xml version="1.0"?>
<package format="2">
  <name>panda_robot_server</name>
  <version>1.0.0</version>
  <description>Robot Server for Franka Emika Panda robots</description>

  <maintainer email="matteo.lucchi@joanneum.at">Matteo Lucchi</maintainer>
  <maintainer email="friedemann.zindler@joanneum.at">Friedemann Zindler</maintainer>
  <maintainer email="christian.bauer@joanneum.at">Christian Bauer</maintainer>

  <license>MIT</license>

  <author email="christian.bauer@joanneum.at">Christian Bauer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>


  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>

  <!-- TODO lockup the configs for Franka Emika-->
  <exec_depend>panda_gazebo</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>franka_example_controllers</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>franka_msgs</exec_depend>
  <exec_depend>franka_visualization</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>libfranka</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_commander</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>
